--- a/index.html
+++ b/index.html
@@ -29,7 +29,14 @@
 
         <div class="navbar__right">
             <p>Courses</p>
-            <p>My Learning</p>
+
+            <div class="mylearning">
+                <p>My Learning</p>
+                <div class="mylearning__popup">
+                    <p>you didn't purchase anything</p>
+                </div>
+            </div>
+            
             <i class="fa-solid fa-cart-shopping" style="color: #000000;"></i>
             <i class="fa-solid fa-user" style="color: #000000;"></i>
             <i class="fa-solid fa-bell" style="color: #000000;"></i>
@@ -48,6 +55,10 @@
     <!--Sale image-->
     <div class="sale-image">
         <img src="images/sales-image.jpg" alt="">
+        <div class="sale-image__offer">
+            <h2>Learning that gets you</h2>
+            <p>Skills for you present and future. Get startedd with us</p>
+        </div>
     </div>
 
     <!--Recommended for you-->
