--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
         <div class="sale-image__offer">
             <h2>Learning that gets you</h2>
             <p>Skills for you present and future. Get startedd with us</p>
+
+            <div class="carousel">
+                <img src="play-button.png" alt="" class="carousel__1">
+                <img src="previous.png" alt="" class="carousel__2">
+            </div>
         </div>
     </div>
 
