--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
             <i class="fa-solid fa-user" style="color: #000000;"></i>
             <i class="fa-solid fa-bell" style="color: #000000;"></i>
         </div>
+
+        <div class="navbar__bars">
+            <i class="fa-solid fa-bars" style="color: #000000;"></i>
+        </div>
     </div>
 <!--Categories-->
     <div class="categories">
@@ -57,7 +61,7 @@
         <img src="images/sales-image.jpg" alt="">
         <div class="sale-image__offer">
             <h2>Learning that gets you</h2>
-            <p>Skills for you present and future. Get startedd with us</p>
+            <p>Skills for you present and future. Get started with us</p>
 
             <div class="carousel">
                 <img src="play-button.png" alt="" class="carousel__1">
